# vcl

./: CLAUDE.md  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  shell.nix
cvcl/: CMakeLists.txt  main.cpp
examples/: CMakeLists.txt
examples/cvcl/: CMakeLists.txt  main.cpp
examples/test/: CMakeLists.txt  main.cpp
include/VCL/: AST.hpp  Attribute.hpp  Debug.hpp  Definition.hpp  Directive.hpp  Error.hpp  ExecutionSession.hpp  Lexer.hpp  Logger.hpp  Meta.hpp  Module.hpp  ModuleInfo.hpp  ModuleUtils.hpp  Parser.hpp  PrettyPrinter.hpp  Source.hpp  Storage.hpp  VCL.hpp
include/VCL/AST/: ASTConsumer.hpp  ASTContext.hpp  Attr.hpp  AttributeInstance.hpp  BuiltinTypes.def  ConstantValue.hpp  Decl.hpp  DeclContext.hpp  DeclTemplate.hpp  DeclVisitor.hpp  Expr.hpp  ExprEvaluator.hpp  ExprVisitor.hpp  Operator.hpp  Stmt.hpp  StmtVisitor.hpp  SymbolRef.hpp  Template.hpp  Type.hpp  TypeCache.hpp  TypePrinter.hpp  TypeVisitor.hpp  Visitor.hpp
include/VCL/Basic/: TokenKind.def
include/VCL/CodeGen/: CodeGenAction.hpp  CodeGenFunction.hpp  CodeGenModule.hpp  CodeGenTypes.hpp  Mangler.hpp  Optimizer.hpp
include/VCL/Core/: Attribute.hpp  CompilerContext.hpp  Diagnostic.def  Diagnostic.hpp  DiagnosticConsumer.hpp  DiagnosticOptions.hpp  Directive.hpp  Error.def  ErrorSource.hpp  Format.hpp  Handle.hpp  Hasher.hpp  Identifier.hpp  LexerError.hpp  Source.hpp  SourceError.hpp  SourceLocation.hpp  SourceManager.hpp  Target.hpp  TargetOptions.hpp  TokenKind.def  TokenKind.hpp
include/VCL/Frontend/: CompilerContext.hpp  CompilerInstance.hpp  CompilerInvocation.hpp  Directives.hpp  ExecutionSession.hpp  FrontendAction.hpp  FrontendActions.hpp  ModuleCache.hpp  Storage.hpp  TextDiagnosticConsumer.hpp
include/VCL/Lex/: Lexer.hpp  Token.hpp  TokenKindLookup.hpp  TokenStream.hpp
include/VCL/Parse/: Parser.hpp
include/VCL/Sema/: DefineTable.hpp  ModuleTable.hpp  Scope.hpp  ScopeManager.hpp  Sema.hpp  SymbolTable.hpp  Template.hpp  TemplateArgumentDeducer.hpp
include/vcl/: ast.hpp  definition.hpp  jit.hpp  lexer.hpp  parser.hpp  vcl.hpp
src/: AST.cpp  Aggregate.cpp  Aggregate.hpp  Attribute.cpp  Callable.cpp  Callable.hpp  CallableTemplate.cpp  CallableTemplate.hpp  Cast.cpp  Cast.hpp  Debug.cpp  Directive.cpp  ExecutionContext.cpp  ExecutionContext.hpp  ExecutionSession.cpp  Handle.hpp  Intrinsic.cpp  Intrinsic.hpp  Intrinsics.cpp  Intrinsics.hpp  Lexer.cpp  Math.hpp  Meta.cpp  Module.cpp  ModuleBuilder.cpp  ModuleBuilder.hpp  ModuleContext.cpp  ModuleContext.hpp  ModuleInfo.cpp  ModuleOptimizer.cpp  ModuleOptimizer.hpp  ModuleVerifier.cpp  ModuleVerifier.hpp  NativeTarget.cpp  NativeTarget.hpp  Parser.cpp  PrettyPrinter.cpp  Scope.cpp  Scope.hpp  Source.cpp  (+24 more)
src/AST/: ASTConsumer.cpp  ASTContext.cpp  DeclContext.cpp  ExprEvaluator.cpp  Type.cpp  TypeCache.cpp  TypePrinter.cpp
src/CodeGen/: CGConstantValue.cpp  CGDecl.cpp  CGExpr.cpp  CGStmt.cpp  CodeGenFunction.cpp  CodeGenModule.cpp  CodeGenTypes.cpp  Mangler.cpp  Optimizer.cpp
src/Core/: Attribute.cpp  CompilerContext.cpp  Diagnostic.cpp  DiagnosticConsumer.cpp  Identifier.cpp  Source.cpp  SourceManager.cpp  Target.cpp  TargetOptions.cpp
src/Frontend/: CompilerContext.cpp  CompilerInstance.cpp  CompilerInvocation.cpp  Directives.cpp  ExecutionSession.cpp  FrontendActions.cpp  TextDiagnosticConsumer.cpp
src/Lex/: Lexer.cpp  TokenKindLookup.cpp  TokenStream.cpp
src/Parse/: Parser.cpp
src/Sema/: Sema.cpp  Template.cpp  TemplateArgumentDeducer.cpp
test/: CMakeLists.txt  test.cpp
test/Common/: ExpectedDiagnostic.hpp  MakeModule.hpp
test/Core/: Source.cpp  SourceManager.cpp
test/Frontend/: ControlFlow.cpp  Expr.cpp  InOut.cpp  Template.cpp
test/Lex/: Lexer.cpp  TokenStream.cpp
test/Sema/: Sema.cpp
test/VCL/: binaryexpr.vcl  builtinpassthrough.vcl  callexpr.vcl  controlflow.vcl  fieldaccess.vcl  numericcast.vcl  splatexpr.vcl  subscriptexpr.vcl  templatededuction.vcl  templatedependent.vcl  templatefunc.vcl  templatestruct.vcl  unaryexpr.vcl  vecbinaryexpr.vcl
test/vcl/: array.vcl  attribute.vcl  cast.vcl  const.vcl  constarrayinit.vcl  conststructinit.vcl  consttononconst.vcl  distance.vcl  distancedouble.vcl  dummy.vcl  empty.vcl  extractinsert.vcl  factorial.vcl  infiniterec.vcl  initializeronextern.vcl  inout.vcl  inoutparameters.vcl  macro.vcl  preprocessor.vcl  span.vcl  stepreverse.vcl  templatefunction.vcl  templatering.vcl  vdoublemath.vcl
vcl/: Audio.vcl  Gain.vcl  Manhattan.vcl  Math.vcl  SinOsc.vcl  SquareOsc.vcl  array.vcl  call.vcl  condition.vcl  control.vcl  convolution.vcl  delay.vcl  gain.vcl  import.vcl  import2.vcl  inout.vcl  insert.vcl  language.vcl  manhattan.vcl  ring.vcl  sinosc.vcl  span.vcl  squareosc.vcl  struct.vcl  template.vcl  test.vcl
vcl/node/: add.vcl  convolution_cache_optimized.vcl  convolution_multichannel_simd.vcl  convolution_overlap_save.vcl  convolution_simd_explicit.vcl  templated_add.vcl  templated_convolution.vcl
